fix(images): WatermarkFilterTest OS별 폰트 렌더링 차이 허용 임계값 상향
- AVG_PIXEL_DELTA_TOLERANCE: 6.0 → 20.0
- MAX_PIXEL_DELTA_TOLERANCE: 96 → 128
- Linux CI에서 FreeType 폰트 렌더링이 macOS CoreText와 달라 발생하는 false failure 해소

chore: .claude/skills 중복 스킬(senior-architect, code-reviewer) 제거 (user scope와 중복)